# darkroom

./: .env.example  .gitignore  Makefile  README.md  app.py  docker-compose.yml  editor.py  processor.py  renderer.py  requirements.txt
backend/: pyproject.toml
backend/darkroom/: main.py  storage.py
backend/darkroom/api/: jobs.py  media.py  projects.py
backend/darkroom/services/: editor.py  renderer.py  transcription.py
docker/: Dockerfile.backend
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/TranscriptEditor/: TranscriptEditor.tsx
frontend/src/components/VideoPreview/: VideoPreview.tsx
frontend/src/views/: Editor.tsx  Processing.tsx  Setup.tsx  Welcome.tsx
static/: index.html  style.css
